--- a/.gitignore
+++ b/.gitignore
@@ -21,3 +21,14 @@
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
+
+#
+
+.DS_Store
+.gradle
+.idea/
+
+build/
+gradle/
+gradlw
+gradlew.bat
