--- a/build.gradle
+++ b/build.gradle
@@ -5,7 +5,7 @@ plugins {
 	id 'com.palantir.docker' version '0.22.1'
 	id 'com.google.cloud.tools.jib' version '2.8.0'
 }
-
+jib.to.image = 'gcr.io/verpic-backend/image-built-with-jib'
 group = 'teamverpic'
 version = '0.0.1-SNAPSHOT'
 sourceCompatibility = '11'
@@ -22,7 +22,6 @@ repositories {
 
 dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
-	implementation 'org.springframework.boot:spring-boot-starter-data-rest'
 	//implementation 'org.springframework.boot:spring-boot-starter-security'
 	implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
