feat : Sign up and log in 회원가입 및 로그인 기능 추가 (테스트 코드, 리펙토링 필요)

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -21,7 +21,7 @@ services:
       - backend-network
 
   spring-boot:
-    image: verpic-backend:0.0.1-SNAPSHOT
+    image: gcr.io/verpic-backend/image-built-with-jib
     ports:
       - "8080:8080"
     container_name: verpic-backend
