--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,13 @@
+# 키 형식
+server.ssl.enabled=true
+server.ssl.key-store-type=PKCS12
+server.ssl.key-store=keystore.jks
+server.ssl.key-store-password=verpic
+server.ssl.key-alias=tomcat
+
+# 만약 스프링 시큐리티를 사용중이라면 아래 설정도 포함
+security.require-ssl=true
+
 
 spring.datasource.url=jdbc:mysql://localhost:3306/verpic_db?useSSL=false
 spring.datasource.username=verpic
@@ -17,3 +27,4 @@ spring.data.mongodb.database=database
 spring.data.mongodb.authentication-database=admin
 spring.data.mongodb.username=verpic
 spring.data.mongodb.password=verpic
+
