--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,12 +1,12 @@
 # 키 형식
-server.ssl.enabled=true
-server.ssl.key-store-type=PKCS12
-server.ssl.key-store=keystore.jks
-server.ssl.key-store-password=verpic
-server.ssl.key-alias=tomcat
+#server.ssl.enabled=true
+#server.ssl.key-store-type=PKCS12
+#server.ssl.key-store=keystore.jks
+#server.ssl.key-store-password=verpic
+#server.ssl.key-alias=tomcat
 
 # 만약 스프링 시큐리티를 사용중이라면 아래 설정도 포함
-security.require-ssl=true
+#security.require-ssl=true
 
 
 spring.datasource.url=jdbc:mysql://localhost:3306/verpic_db?useSSL=false
