--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,5 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/verpic_db?useSSL=false
+#spring.datasource.url=jdbc:mysql://localhost:3306/verpic_db?useSSL=false
+spring.datasource.url=jdbc:mysql://211.211.70.246:3306/verpic_db?useSSL=false
 #spring.datasource.url=jdbc:mysql://verpic.iptime.org:3306/verpic_db?useSSL=false
 spring.datasource.username=verpic
 spring.datasource.password=verpic
@@ -11,9 +12,9 @@ spring.jpa.generate-ddl=true
 # API
 spring.jpa.show-sql=true
 
-spring.data.mongodb.port=27017
-#spring.data.mongodb.uri=mongodb://verpic:verpic@verpic.iptime.org:27017/database
-spring.data.mongodb.database=database
-spring.data.mongodb.authentication-database=admin
-spring.data.mongodb.username=verpic
-spring.data.mongodb.password=verpic
+#spring.data.mongodb.port=27017
+spring.data.mongodb.uri=mongodb://verpic:verpic@211.211.70.246:27017/database
+#spring.data.mongodb.database=database
+#spring.data.mongodb.authentication-database=admin
+#spring.data.mongodb.username=verpic
+#spring.data.mongodb.password=verpic
