--- a/.gitignore
+++ b/.gitignore
@@ -14,7 +14,7 @@
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
 
-#
+application-oauth.properties
 
 .DS_Store
 .gradle
