--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,7 +5,10 @@ services:
   db:
     platform: linux/x86_64
     image: mysql:5.7
-    command: [ "--lower_case_table_names=1","--ignore-db-dir=lost+found" ]
+    command: [ "--lower_case_table_names=1",
+      "--ignore-db-dir=lost+found",
+      "--character-set-server=utf8,
+      --collation-server=utf8_general_ci" ]
     environment:
       MYSQL_ROOT_PASSWORD: root
       MYSQL_DATABASE: verpic_db
