feat: stt by chanhyun

--- a/build.gradle
+++ b/build.gradle
@@ -56,6 +56,13 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-jdbc'
 	implementation 'mysql:mysql-connector-java'
 	implementation 'org.springframework.boot:spring-boot-starter-data-mongodb'
+
+
+	implementation platform('com.google.cloud:libraries-bom:20.9.0')
+
+	implementation 'com.google.cloud:google-cloud-speech'
+
+	implementation 'org.springframework.cloud:spring-cloud-gcp-starter-storage'
 }
 
 test {
