--- a/.gitignore
+++ b/.gitignore
@@ -15,6 +15,8 @@
 hs_err_pid*
 
 application-oauth.properties
+google-cloud.properties
+verpic-1628699741057-7298f7a6fc47.json
 
 .DS_Store
 .gradle
