--- a/build.gradle
+++ b/build.gradle
@@ -58,11 +58,11 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-data-mongodb'
 
 
-	implementation platform('com.google.cloud:libraries-bom:20.9.0')
+	//implementation platform('com.google.cloud:libraries-bom:20.9.0')
 
-	implementation 'com.google.cloud:google-cloud-speech'
+	//implementation 'com.google.cloud:google-cloud-speech'
 
-	implementation 'org.springframework.cloud:spring-cloud-gcp-starter-storage'
+	//implementation 'org.springframework.cloud:spring-cloud-gcp-starter-storage'
 }
 
 test {
