--- a/build.gradle
+++ b/build.gradle
@@ -59,8 +59,11 @@ dependencies {
 
 	//google cloud speech (Sound to Text)
 	implementation platform('com.google.cloud:libraries-bom:20.9.0')
-	compileOnly 'com.google.cloud:google-cloud-speech'
-	compileOnly 'com.google.cloud:google-cloud-storage'
+
+	implementation 'com.google.cloud:google-cloud-speech'
+	implementation 'com.google.cloud:google-cloud-storage'
+
+	//implementation 'org.springframework.cloud:spring-cloud-gcp-starter-storage'
 }
 
 test {
