--- a/build.gradle
+++ b/build.gradle
@@ -58,6 +58,8 @@ dependencies {
 	implementation 'com.google.cloud:google-cloud-speech'
 	implementation 'com.google.cloud:google-cloud-storage'
 
+	implementation 'org.json:json:20190722'
+
 	//implementation 'org.springframework.cloud:spring-cloud-gcp-starter-storage'
 }
 
