--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,8 +11,9 @@ spring.jpa.generate-ddl=true
 # API
 spring.jpa.show-sql=true
 
+#spring.data.mongodb.uri=mongodb://mongo:27017/database
+spring.data.mongodb.host=mongo
 spring.data.mongodb.port=27017
-spring.data.mongodb.uri=mongodb://mongo:27017/database
 spring.data.mongodb.database=database
 spring.data.mongodb.authentication-database=admin
 spring.data.mongodb.username=verpic
