--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,7 +12,7 @@ spring.jpa.generate-ddl=true
 spring.jpa.show-sql=true
 
 spring.data.mongodb.port=27017
-#spring.data.mongodb.uri=mongodb://mongo:27017/database
+#spring.data.mongodb.uri=mongodb://verpic:verpic@verpic.iptime.org:27017/database
 spring.data.mongodb.database=database
 spring.data.mongodb.authentication-database=admin
 spring.data.mongodb.username=verpic
