fix: deploy environment to development

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,7 +14,7 @@ spring.jpa.show-sql=true
 
 
 # deploy 브랜치 업로드용 main에는 host없애기
-spring.data.mongodb.host=mongo
+#spring.data.mongodb.host=mongo
 spring.data.mongodb.port=27017
 spring.data.mongodb.database=database
 spring.data.mongodb.authentication-database=admin
