--- a/src/main/resources/google-cloud.properties
+++ b/src/main/resources/google-cloud.properties
@@ -1,2 +1,2 @@
 #GOOGLE_APPLICATION_CREDENTIALS = "C:\Users\rlacksgus\Desktop\verpic_stt\new\verpic-1628699741057-7298f7a6fc47.json"
-GOOGLE_APPLICATION_CREDENTIALS = "\src\main\resources\verpic-1628699741057-7298f7a6fc47.json"
+GOOGLE_APPLICATION_CREDENTIALS = "\database\credential\verpic-1628699741057-7298f7a6fc47.json"
