--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/verpic_db?useSSL=false?autoReconnect=true
-spring.datasource.dbcp.test-on-borrow=true
-spring.datasource.dbcp.validation-query=select 1
+spring.datasource.url=jdbc:mysql://localhost:3306/verpic_db?useSSL=false
+#spring.datasource.dbcp.test-on-borrow=true
+#spring.datasource.dbcp.validation-query=select 1
 spring.datasource.username=verpic
 spring.datasource.password=verpic
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
