--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,5 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/verpic_db?useSSL=false?autoReconnect=true
+spring.datasource.url=jdbc:mysql://localhost:3306/verpic_db?useSSL=false
+#?autoReconnect=true
 spring.datasource.dbcp.test-on-borrow=true
 spring.datasource.dbcp.validation-query=select 1
 spring.datasource.username=verpic
@@ -15,7 +16,7 @@ spring.jpa.show-sql=true
 
 
 # deploy 브랜치 업로드용 main에는 host없애기
-spring.data.mongodb.host=mongo
+# spring.data.mongodb.host=mongo
 spring.data.mongodb.port=27017
 spring.data.mongodb.database=database
 spring.data.mongodb.authentication-database=admin
